<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Kikuyu</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>
    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_weekdays">Weekdays</string>
    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_bodyparts">Body Parts</string>
</resources>
