<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:onClick="openFamilyList"
        android:text="@string/category_family" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:onClick="openColorsList"
        android:text="@string/category_colors" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:onClick="openPhrasesList"
        android:text="@string/category_phrases" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_weekdays"
        android:onClick="openWeekdaysList"
        android:text="@string/category_weekdays" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_bodyparts"
        android:onClick="openBodypartsList"
        android:text="@string/category_bodyparts" />

</LinearLayout>


